--- a/Messenger Application/Info.plist
+++ b/Messenger Application/Info.plist
@@ -21,5 +21,40 @@
 			</array>
 		</dict>
 	</dict>
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb246030560864597</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>246030560864597</string>
+    <key>FacebookClientToken</key>
+    <string>f39d89c4db05c8e2c7dd7727bfefe036</string>
+    <key>FacebookDisplayName</key>
+    <string>Messenger Application</string>
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fbapi20130214</string>
+      <string>fbapi20130410</string>
+      <string>fbapi20130702</string>
+      <string>fbapi20131010</string>
+      <string>fbapi20131219</string>
+      <string>fbapi20140410</string>
+      <string>fbapi20140116</string>
+      <string>fbapi20150313</string>
+      <string>fbapi20150629</string>
+      <string>fbapi20160328</string>
+      <string>fbauth</string>
+      <string>fb-messenger-share-api</string>
+      <string>fbauth2</string>
+      <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
